--- a/geral.css
+++ b/geral.css
@@ -1,3 +1,28 @@
 body {
-    background-color: antiquewhite;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+
 }
+
+h1{
+    color: #5bbe42;
+}
+
+.center{
+    text-align: center;
+}
+
+.container{
+    padding: 0px 50px;
+}
+
+.rodape{
+    position: absolute;
+    width: 90%;
+    height: 25px;
+    background-color: #5bbe42;
+    color: beige;
+    bottom: 50;
+    display: flex;
+    justify-content: center;
+  }
